# unity-matrices

./: .gitignore  Readme.md
matrix-fun/: .clang-format  CMakeLists.txt  Readme.md  Tensor4.cpp  Tensor4.h  Utils.h  eigenTest.h  main.cpp  matrix.cpp  matrix.h  tensorMain.cpp  tensortMain.cpp
